Stop columns from overlapping for narrow widths

--- a/assets/web/css/style.scss
+++ b/assets/web/css/style.scss
@@ -2072,6 +2072,28 @@ form#nameForm {
   }
 }
 
+#users-table {
+  thead tr {
+    @include media-breakpoint-down(lg) {
+      td.username {
+        width: 360px;
+      }
+
+      td.status {
+        width: 100px;
+      }
+
+      td.banned {
+        width: 100px;
+      }
+
+      td.created-on {
+        width: 300px;
+      }
+    }
+  }
+}
+
 #username-warning-modal {
   .modal-content, .modal-header {
     background-color: #282828;
